--- a/templates/base.html
+++ b/templates/base.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-          crossorigin="anonymous">
-    <title>{{title}}</title>
+    <link rel="stylesheet" href="C:\Users\smirn\Documents\stem-2.0\static\css\style.css">
+    <title>{{ title }}</title>
+
 </head>
-<body>
+
+<body bgcolor="#1b2838" leftmargin="0" topmargin="0">
 <header>
-    <nav class="navbar navbar-light bg-light">
-        <h1>Наше приложение</h1>
-        {% if current_user.is_authenticated %}
-            <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
-        {% else %}
-            <p>
-                <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
-                <a class="btn btn-success" href="/login">Войти</a>
-            </p>
+   <img src="C:\Users\smirn\Documents\stem-2.0\static\img\logo_steam.png" width="150" height="50" alt="Stem">
+    {% if current_user.is_authenticated %}
+        <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+    {% else %}
+    <p>
+        <a href="/register">Зарегистрироваться</a>
+        <a href="/login">Войти</a>
+    </p>
         {% endif %}
-    </nav>
 </header>
 <!-- Begin page content -->
 <main role="main" class="container">
     {% block content %}{% endblock %}
 </main>
+
+<footer>
+    <hr>
+    <img align="left" src="C:\Users\smirn\Documents\stem-2.0\static\img\footerLogo_valve_new1.png" width="85" height="25" alt="Stem">
+    <p>© 2023 Volvo Corporation. Все права защищены. Все торговые марки являются собственностью соответствующих владельцев в США и других странах.</p>
+    <p>НДС включён во все цены, где он применим.</p>
+    <hr>
+</footer>
 </body>
 </html>
