--- a/templates/library.html
+++ b/templates/library.html
@@ -1,10 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Добро пожаловать в Stem</h1>
-{% if current_user.is_authenticated %}
-    <a href="news" class="btn btn-secondary">Добавить новость</a>
-{% endif %}
+<h1>Мои игры</h1>
 {% for item in news%}
 <div class="col-md6 border rounded">
     <h2>{{item.title}}</h2>
