--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,8 +49,10 @@ a:active {
   background-color: transparent;
   text-decoration: none;
 }
-header_inside{
-  display: block;
+.navbar {
+  display: flex;
+  overflow: hidden;
+  justify-content: space-around;
   background: #171a21;
   font-size: 20px;
   max-width: 60%;
@@ -77,4 +79,29 @@ height: 100%;
 margin: 0;
 background: #1b2838;
 }
+.dropdown{
+background-color: None;
+color: #8f98a0;
+}
 
+.chat-link{
+position: fixed;
+font-size: 20px;
+left: 93%;
+top: 90%;
+background-color: #171a21;
+color: #8f98a0;
+padding: 1%;
+opacity: 0.5;
+}
+.chat-link:hover{
+color: #fafafa;
+opacity: 1;
+}
+.chat-style{
+  display: block;
+  font-size: 16px;
+  color: #8f98a0;
+  min-height: 100%;
+  padding-bottom: 50px;
+}
