--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,7 +81,40 @@ background: #1b2838;
 }
 .dropdown{
 background-color: None;
+outline: none;
 color: #8f98a0;
+border: 0px;
+}
+
+.dropdown:hover{
+background-color: None;
+outline: none;
+color: #fafafa;
+border: 0px;
+}
+.btn btn-secondary dropdown-toggle{
+background-color: None;
+outline: none;
+color: #8f98a0;
+border: 0px;
+}
+
+.btn btn-secondary dropdown-toggle:hover{
+background-color: None;
+outline: none;
+color: #fafafa;
+border: 0px;
+}
+.dropdown-menu{
+background-color: #171a21;
+outline: none;
+color: #8f98a0;
+border: 0px;
+}
+.dropdown-menu:hover{
+background-color: None;
+color: #fafafa;
+border: 0px;
 }
 
 .chat-link{
@@ -92,7 +125,7 @@ top: 90%;
 background-color: #171a21;
 color: #8f98a0;
 padding: 1%;
-opacity: 0.5;
+opacity: 0.8;
 }
 .chat-link:hover{
 color: #fafafa;
@@ -103,5 +136,5 @@ opacity: 1;
   font-size: 16px;
   color: #8f98a0;
   min-height: 100%;
-  padding-bottom: 50px;
+  margin: 20px;
 }
