--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,7 +54,7 @@ a:active {
   overflow: visible !important;
   justify-content: space-around;
   background: #171a21;
-  font-size: 20px;
+  font-size: 30px;
   max-width: 60%;
   margin-left: 20%
 }
@@ -76,14 +76,14 @@ h1{
  padding-bottom: 9%;}
 
 body, html{
-height: 100%;
+height: 120%;
 margin: 0;
 background: #1b2838;
 }
 
 .btn-secondary.dropdown-toggle{
 background-color: #171a21;
-font-size: 20px;
+font-size: 30px;
 outline: none;
 color: #8f98a0;
 border: 0px;
@@ -93,7 +93,7 @@ box-shadow: None;
 
 .btn-secondary.dropdown{
 background-color: #171a21;
-font-size: 20px;
+font-size: 30px;
 outline: none;
 color: #8f98a0;
 border: 0px;
@@ -102,7 +102,7 @@ box-shadow: None;
 .btn-secondary:hover, .btn-secondary.dropdown-toggle:focus{
   color: #fafafa;
   background-color: #171a21;
-  font-size: 20px;
+  font-size: 30px;
   border: None
 }
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
@@ -110,7 +110,7 @@ box-shadow: None;
 .show > .btn-secondary.dropdown-toggle:focus {
   color: #fafafa;
   background-color: #171a21;
-  font-size: 20px;
+  font-size: 30px;
   border: None;
   box-shadow: None;
 }
@@ -170,4 +170,9 @@ opacity: 1;
   color: #8f98a0;
   min-height: 100%;
   margin: 20px;
+}
+.parallel{
+margin-top: 5%;
+display: grid;
+grid-template-columns: 60% 40% 20%;
 }
