--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         <a href="/library">Библиотека</a>
         </div>
         <div class="dropdown">
-	  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ current_user.name }}</a>
+	  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ current_user.name }}#{{ current_user.id }}</a>
 	  <ul class="dropdown-menu">
 		<li><a class="dropdown-item" href="/friends">Друзья</a></li>
 		<li><a class="dropdown-item" href="/logout">Выйти</a></li>
