--- a/templates/chat.html
+++ b/templates/chat.html
@@ -19,8 +19,8 @@
     {% block content %}
 <h1>{{ current_user.name }}</h1>
 <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <input class="form-control me-2" type="search" placeholder="Поиск друга по id или никнейму" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Найти</button>
       </form>
 </main>
 </div>
