--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>current_user.id</h1>
+<h1>Профиль {{ user.name }}</h1>
+    <div>
+        Email - {{user.email}}
+    </div>
+    <div>
+        Сохранённые игры:
+        {% for item in user.games %}
+        {{ item.title }}
+        {% endfor %}
+    </div>
 {% endblock %}
