--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,10 @@
         <a href="/library">Библиотека</a>
         </div>
         <div class="dropdown">
-	  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ current_user.name }}</a>
+	  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ current_user.name }}#{{ current_user.id }}</a>
 	  <ul class="dropdown-menu">
-		<li><a class="dropdown-item" href="/friends">Друзья</a></li>
+          <li><a class="dropdown-item" href="/{{ current_user.id }}">Профиль</a></li>
+		<li><a class="dropdown-item" href="/friends">Добавить в друзья</a></li>
 		<li><a class="dropdown-item" href="/logout">Выйти</a></li>
 	  </ul>
 	</div>
