--- a/templates/chat_dialogue.html
+++ b/templates/chat_dialogue.html
@@ -1,9 +1,11 @@
-{% extends "base.html" %}
+{% extends "chat.html" %}
 
 {% block content %}
-<h1>
-    {{ user.name }}
-</h1>
+       <div class="overflow-auto">
+    {% for item in messages% }
+  <p>item.content</p>
+  { % endfor% }
+        </div>
 
 
 {% endblock %}
