--- a/templates/chatschild.html
+++ b/templates/chatschild.html
@@ -6,7 +6,7 @@
 <div class="col-md6 border rounded">
     <h2>{{item.user1}} и {{item.user2}}</h2>
     <div>
-        <a href="/{{item.user1}};{{item.user2}}/chat" >Чат</a>
+        <a onclick="window.open('/{{item.user1}};{{item.user2}}/chat', '_blank', 'location=yes,height=850,width=850,scrollbars=yes,status=yes');"><h2>Чат</h2></a>
     </div>
 </div>
 
