--- a/templates/chatschild.html
+++ b/templates/chatschild.html
@@ -4,9 +4,9 @@
 <h1>Ваши Чаты</h1>
 {% for item in news%}
 <div class="col-md6 border rounded">
-    <h2>{{item.user1}} и {{item.user2}}</h2>
+    <h2>{{item[0]}} и {{item[1]}} id = {{item[2]}}</h2>
     <div>
-        <a href="/{{item.user1}};{{item.user2}}/chat" >Чат</a>
+        <a href="/{{item[0]}};{{item[1]}};{{item[2]}}/chat" >Чат</a>
     </div>
 </div>
 
