--- a/templates/chat_dialogue.html
+++ b/templates/chat_dialogue.html
@@ -4,8 +4,10 @@
        <div class="overflow-auto">
     {% for item in messages% }
   <p>item.content</p>
-  { % endfor% }
+  { % endfor % }
         </div>
-
+        {{ form.message.label }}<br>
+        {{ form.message(class="form-control") }}<br>
+    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
 
 {% endblock %}
