--- a/templates/chat_dialogue.html
+++ b/templates/chat_dialogue.html
@@ -1,13 +1,31 @@
-{% extends "chat.html" %}
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <title>{{ title }}</title>
 
-{% block content %}
+</head>
+<body bgcolor="#1b2838" leftmargin="0" topmargin="0">
+<!-- Begin page content -->
        <div class="overflow-auto">
     {% for item in messages%}
   <p>item.content</p>
-  { % endfor % }
+  {% endfor %}
         </div>
+<p>
+        <p>
         {{ form.message.label }}<br>
         {{ form.message(class="form-control") }}<br>
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+    </p>
+<p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
 
-{% endblock %}
+{% block content %}{% endblock %}
+
+</body>
+</html>
