--- a/templates/chat_dialogue.html
+++ b/templates/chat_dialogue.html
@@ -7,27 +7,77 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/static/css/style.css">
     <title>{{ title }}</title>
 
+    <style>
+.chat-box{
+position: fixed;
+left: 0%;
+top: 80%;
+min-width: 100%;
+}
+
+.overflow-auto{
+min-width: 100%;
+max-height: 75%;
+color: #fafafa;
+}
+body, html{
+height: 100%;
+margin: 0;
+background: #1b2838;
+}
+a:link {
+color: #8f98a0;
+background-color: transparent;
+text-decoration: none;
+}
+
+a:visited {
+  color: #8f98a0;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #fafafa;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:active {
+  color: #fafafa;
+  background-color: transparent;
+  text-decoration: none;
+}
+    </style>
 </head>
-<body bgcolor="#1b2838" leftmargin="0" topmargin="0">
+<body class="mini">
 <!-- Begin page content -->
        <div class="overflow-auto">
     {% for item in messages%}
-  <p>{{item[2]}}</p>
+         {% if item[0] == curent_user.name %}
+  <p align="right">{{item[3]}}</p>
+  <p align="right">{{item[2]}}</p>
+           {% else %}
+             <p align="left">{{item[3]}}</p>
+             <p align="left">{{item[1]}}</p>
+{% endif %}
   {% endfor %}
         </div>
 <p>
+<div class="chat-box">
+
 <form action="" method="post">
     {{ form.hidden_tag() }}
+    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
         <p>
         {{ form.message.label }}<br>
         {{ form.message(class="form-control") }}<br>
     </p>
-<p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    </form>
 
+    </form>
+</div>
 {% block content %}{% endblock %}
 
 </body>
