--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -2,13 +2,16 @@
 
 {% block content %}
 <h1>Профиль {{ user.name }}</h1>
-    <div>
-        Email - {{user.email}}
-    </div>
-    <div>
-        Сохранённые игры:
+<div>
+        <h2>О себе - {{user.about}}</h2>
+        <h2>В Stem'е с: {{user.created_date}}</h2>
+        {% if user.news %}
+        <h2>Последняя новость: {{user.news[-1].title}}</h2>
+        {% endif %}
+        <h2>Email - {{user.email}}</h2>
+
+        <h2> Сохранённые игры: </h2>
         {% for item in user.games %}
-        {{ item.title }}
-        {% endfor %}
-    </div>
+        <h2>{{ item.title }}</h2>
+        {% endfor %}</div>
 {% endblock %}
