--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Добро пожаловать в Stem</h1>
 {% if current_user.is_authenticated %}
-    <a href="news" class="btn btn-secondary">Поделитесь впечатлениями</a>
+    <a href="news" class="btn btn-primary">Поделитесь впечатлениями</a>
 {% endif %}
 {% for item in news%}
 <div class="col-md6 border rounded">
