--- a/templates/store.html
+++ b/templates/store.html
@@ -2,12 +2,8 @@
 
 {% block content %}
 <h1>Магазин</h1>
-<form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Введите название продукта" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Найти</button>
-      </form>
 {% if current_user.is_authenticated %}
-    <a href="add_games" class="btn btn-secondary">Добавить игру</a>
+    <a href="add_games" class="btn btn-primary">Добавить игру</a>
 {% endif %}
 {% for item in store_games %}
 <div class="col-md6 border rounded">
