--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -2,16 +2,19 @@
 
 {% block content %}
 <h1>Профиль {{ user.name }}</h1>
-<div>
+<div class="profile_description">
         <h2>О себе - {{user.about}}</h2>
         <h2>В Stem'е с: {{user.created_date}}</h2>
         {% if user.news %}
         <h2>Последняя новость: {{user.news[-1].title}}</h2>
         {% endif %}
         <h2>Email - {{user.email}}</h2>
-
-        <h2> Сохранённые игры: </h2>
+        <dl>
+            <dt>Сохранённые игры:</dt>
         {% for item in user.games %}
-        <h2>{{ item.title }}</h2>
+        <dd>{{ item.title }}</dd>
         {% endfor %}</div>
+        </dl>
+        </div>
+
 {% endblock %}
