--- a/templates/base.html
+++ b/templates/base.html
@@ -2,35 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="C:\Users\smirn\Documents\stem-2.0\static\css\style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     <title>{{ title }}</title>
 
 </head>
 
 <body bgcolor="#1b2838" leftmargin="0" topmargin="0">
-
 <header>
-   <img src="C:\Users\smirn\Documents\stem-2.0\static\img\logo_steam.png" width="150" height="50" alt="Stem">
+    <div class="navbar">
+    <a href="/"><img src="/static/img/logo_steam.png" width="150" height="50" alt="Stem"></a>
+
     {% if current_user.is_authenticated %}
-        <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+        <div>
+        <a href="/store">Магазин</a>
+        </div>
+        <div>
+        <a href="/library">Библиотека</a>
+        </div>
+        <div class="dropdown">
+	  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ current_user.name }}#{{ current_user.id }}</a>
+	  <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="profile/{{ current_user.id }}">Профиль</a></li>
+		<li><a class="dropdown-item" href="/logout">Выйти</a></li>
+	  </ul>
+	</div>
+
     {% else %}
-    <p>
-        <a href="/register">Зарегистрироваться</a>
+    <div align="right">
         <a href="/login">Войти</a>
-    </p>
+            |
+        <a href="/register">Зарегистрироваться</a>
+ </div>
+    </div>
         {% endif %}
-    </nav>
 </header>
+{% if current_user.is_authenticated %}
+<div class="chat-link">
+    <a onclick="window.open('/chat', '_blank', 'location=yes,height=850,width=600,scrollbars=yes,status=yes');">Друзья и чат</a>
+</div>
+{% endif %}
 <!-- Begin page content -->
+<work_page>
 <main role="main" class="container">
     {% block content %}{% endblock %}
 </main>
+</work_page>
 
 <footer>
     <hr>
-    <img align="left" src="C:\Users\smirn\Documents\stem-2.0\static\img\footerLogo_valve_new1.png" width="85" height="25" alt="Stem">
-    <p>© 2023 Volvo Corporation. Все права защищены. Все торговые марки являются собственностью соответствующих владельцев в США и других странах.</p>
+    <img align="left" src="/static/img/footerLogo_valve_new1.png" width="85" height="25" alt="Stem">
+    <p>© 2023 Volve Corporation. Все права защищены. Все торговые марки являются собственностью соответствующих владельцев в РФ и других странах.</p>
     <p>НДС включён во все цены, где он применим.</p>
     <hr>
 </footer>
