--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -13,7 +13,7 @@
             <dt>Сохранённые игры:</dt>
         {% for item in user.games %}
         <dd>{{ item.title }}</dd>
-        {% endfor %}</div>
+        {% endfor %}
         </dl>
         </div>
 
