--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
         <div class="dropdown">
 	  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ current_user.name }}#{{ current_user.id }}</a>
 	  <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="profile/{{ current_user.id }}">Профиль</a></li>
+          <li><a class="dropdown-item" href="/profile/{{ current_user.id }}">Профиль</a></li>
 		<li><a class="dropdown-item" href="/logout">Выйти</a></li>
 	  </ul>
 	</div>
